objects/TC_Technology__c.object
<CustomObject>
    <fields>
        <fullName>BU_Family__c</fullName>
        <label>BU Family</label>
        <picklist>
            <controllingField>Product_Sector__c</controllingField>
            <picklistValues>
                <fullName>AMS Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMSim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spectre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spectre RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UltraSim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Foundation IP Characterization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Space-based Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK Automation System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Advanced Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso AMS Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Analog Design Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Layout Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Legacy - Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Legacy - Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso Schematic Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog ADC IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog AFE IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog Aux IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog DAC IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog Power IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog Timing IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConnX Baseband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDR Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDR PHY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design IP-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Component IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display PHY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet Controller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sector__c</fullName>
        <label>Product Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Circuit Simulation &amp; Characterization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Environment &amp; Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Signoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emulation &amp; Acceleration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC Package/SiP co-design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Signoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthesis &amp; Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System-Level Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Campaign__c</fullName>
        <label>Technical Campaign</label>
        <referenceTo>Technical_Campaign__c</referenceTo>
        <relationshipLabel>TC Technologies</relationshipLabel>
        <relationshipName>TC_Technologies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TC Technology</label>
    <nameField>
        <displayFormat>TCT-{000000}</displayFormat>
        <label>TC Technology ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Technologies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>